--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'net.logicsquad:nanocaptcha:1.2'
     implementation("ch.qos.logback:logback-classic:1.2.8")
     implementation 'com.google.code.gson:gson:2.9.1'
     implementation("net.dv8tion:JDA:$jdaVersion")
