improvement: register commands only for guild

--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -1,4 +1,6 @@
 {
   "suggestionChannel": "INSERT_CHANNEL_ID_HERE",
-  "verificationChannel": "INSERT_CHANNEL_ID_HERE"
+  "verificationChannel": "INSERT_CHANNEL_ID_HERE",
+
+  "civilRole": "INSERT_ROLE_ID_HERE"
 }
